PAY-misc-39a3.7: Changed default server currency from UAH to USD. Corrected currency exchange rates

--- a/design/templates/OpenGame/server_info.tpl.html
+++ b/design/templates/OpenGame/server_info.tpl.html
@@ -17,6 +17,16 @@
     </th>
   </tr>
   <tr>
+    <th>{L_adm_opt_multiaccount_enabled}</th>
+    <th>
+      <!-- IF GAME_MULTIACCOUNT_ENABLED -->
+        {L_sys_yes}
+      <!-- ELSE -->
+        {L_sys_no}
+      <!-- ENDIF -->
+    </th>
+  </tr>
+  <tr>
     <th>{L_adm_opt_empire_mercenary_temporary}</th>
     <th>
       <!-- IF EMPIRE_MERCENARY_TEMPORARY -->
