SYS-fix-39a4.2: Fixed numerous bugs from previous commit

--- a/design/templates/OpenGame/universe.tpl.html
+++ b/design/templates/OpenGame/universe.tpl.html
@@ -347,13 +347,13 @@ uni_row[{galaxyrow.PLANET_NUM}] =
       <span id="missile">{MIPs}</span> {L_gf_mi_title}
     </td>
     <td class=c colspan=3>
-      <span id="flt_recyclers">{PLANET_RECYCLERS}</span> {L_gf_rc_title}
+      <span id="flt_recyclers">{PLANET_RECYCLERS_TEXT}</span> {L_gf_rc_title}
     </td>
     <td class=c colspan="{COL_SPAN_PLUS}">
       <span id="flt_spies">{SPs}</span> {L_gf_sp_title}
     </td>
   </tr>
-  <tr style="display: none;" id="fleetstatusrow"><th class=c colspan=8><table style="font-weight: bold" width="100%" id="fleetstatustable"></table></th></tr>
+  <tr style="display: none;" id="fleetstatusrow"><th class=c colspan="{COL_SPAN}"><table style="font-weight: bold" width="100%" id="fleetstatustable"></table></th></tr>
 </tbody></table>
 
 <form id="uni_missile_form" style="display: none;" name="uni_missile_form" method=POST>
