SYS-feat-39a6.17: Quests and experience for building/research are back. Also added messages on add que errors. Also fixed vacancy

--- a/design/templates/OpenGame/vacation.tpl.html
+++ b/design/templates/OpenGame/vacation.tpl.html
@@ -4,7 +4,8 @@
     <td class="c">
       <span class="fl negative">{NAME}, {L_sys_vacation} {VACATION_END}!</span>
       <!-- IF CAN_LEAVE -->
-      <span class="fr positive link" onclick="window.location.href = window.location.pathname + '?vacation=leave';">[ {L_sys_vacation_leave} ]</span>
+      <!-- <span class="fr positive link" onclick="window.location.href = window.location.pathname + '?vacation=leave';">[ {L_sys_vacation_leave} ]</span> -->
+      <span class="fr positive link" onclick="window.location.href = 'overview.php?vacation=leave';">[ {L_sys_vacation_leave} ]</span>
       <!-- ENDIF --> 
     </td>
   </tr>
