MISC-fix-39a7.25: Fixed error with compiled templates - i.e. Options page

--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -233,8 +233,8 @@
 <!--
       <tr>
         <td class="c_l" colspan="2">
-          <input name="deltime" type="checkbox" id="deltime" <!-- IF deltime -- >checked<!-- ENDIF -- > /> <label for="deltime">{L_deleteaccount}. {L_deleteaccount_tip}</label><br />
-          {L_deleteaccount_on} <!-- IF deltime -- >{deltime_text}<!-- ELSE -- ><span id="delete_on"></span><!-- ENDIF -- >
+          <input name="deltime" type="checkbox" id="deltime" <-- IF deltime -- >checked<-- ENDIF -- > /> <label for="deltime">{L_deleteaccount}. {L_deleteaccount_tip}</label><br />
+          {L_deleteaccount_on} <-- IF deltime -- >{deltime_text}<-- ELSE -- ><span id="delete_on"></span><-- ENDIF -- >
         </td>
       </tr>
 -->
