--- a/design/templates/OpenGame/buildings_research.tpl.html
+++ b/design/templates/OpenGame/buildings_research.tpl.html
@@ -49,7 +49,7 @@
       </a>
     </td>
     <td class="c_c">
-      <div><a href="infos.php?gid={production.ID}">{production.NAME}<!-- IF production.LEVEL -->&nbsp;{production.LEVEL}<!-- IF production.LEVEL_BONUS --><span class="bonus">+{production.LEVEL_BONUS}</span><!-- ENDIF --><!-- ENDIF --><!-- IF production.LEVEL_QUED --><span class="positive">+{production.LEVEL_QUED}</span><!-- ENDIF --></a></div>
+      <div><a href="infos.php?gid={production.ID}">{production.NAME}<!-- IF production.LEVEL_OLD -->&nbsp;{production.LEVEL_OLD}<!-- IF production.LEVEL_BONUS --><span class="bonus">+{production.LEVEL_BONUS}</span><!-- ENDIF --><!-- ENDIF --><!-- IF production.LEVEL_QUED --><span class="positive">+{production.LEVEL_QUED}</span><!-- ENDIF --></a></div>
       <div style="text-align: justify;">{production.DESCRIPTION}</div>
       <table align="center">
         <tr>
