--- a/design/templates/OpenGame/eco_bld_queue_list.tpl.html
+++ b/design/templates/OpenGame/eco_bld_queue_list.tpl.html
@@ -15,7 +15,7 @@
           </tr>
           <tr>
             <th class="c_c"<!-- IF ! U_opt_int_struc_vertical --> colspan="5"<!-- ENDIF -->>
-              <div class="fl"><a class="link" href="buildings.php?mode={QUE_ID}&action=clear">{L_eco_que_clear}</a></div>
+              <div class="fl"><a class="link" href="buildings.php?mode={QUE_ID}&action=clear&ally_id={ALLY_ID}">{L_eco_que_clear}</a></div>
 <!-- IF U_opt_int_struc_vertical -->
             </th>
           </tr>
@@ -33,7 +33,7 @@
           <tr>
             <th class="c_c">
 <!-- ENDIF -->
-              <div class="fr"><a class="link" href="buildings.php?mode={QUE_ID}&action=trim">{L_eco_que_trim}</a></div>
+              <div class="fr"><a class="link" href="buildings.php?mode={QUE_ID}&action=trim&ally_id={ALLY_ID}">{L_eco_que_trim}</a></div>
             </th>
           </tr>
         </table>
