--- a/design/templates/OpenGame/buildings_builds.tpl.html
+++ b/design/templates/OpenGame/buildings_builds.tpl.html
@@ -4,6 +4,7 @@
 var production = Array();
 var unit_selected = null;
 var eco_bld_style_probe;
+var STACKABLE = '{STACKABLE}';
 
 language =
 {
@@ -45,20 +46,32 @@ var que_id = '{QUE_ID}';
 --></script>
 
 <script type="text/javascript" src="js/build_unit.js"></script>
+<script type="text/javascript" >
+  $(".unit_create,.unit_destroy").live('click', function(){
+    $('[name=action]').val($(this).hasClass('unit_create') ? 'create' : 'destroy');
+    $('#form_unit').submit();
+    // alert(action);
+    // buildings.php?mode={QUE_ID}&action=create&unit_id={production.ID}&ally_id={ALLY_ID}
+    // buildings.php?mode={QUE_ID}&action=destroy&unit_id={production.ID}&ally_id={ALLY_ID}
+  });
+</script>
 
 <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
 <!-- INCLUDE eco_queue -->
-<!-- IF U_opt_int_struc_vertical && $QUE_NOT_EMPTY -->
+<!-- IF U_opt_int_struc_vertical && $QUE_NOT_EMPTY && false --> <!-- TODO REMOVE -->
   <!-- DEFINE $COLSPAN = 6 -->
 <!-- ELSE -->
   <!-- DEFINE $COLSPAN = 5 -->
 <!-- ENDIF -->
 
+<table class="makeup" cellspacing="0" cellpadding="0" style="background: transparent">
+<tr style="background: transparent; border: none">
+  <td align="center" valign="top"  >
 <table width="650px" id="unit_table">
   <!-- IF SHOW_SECTORS -->
   <tr>
     <td colspan="{$COLSPAN}" class="c">
-      <table border="0" cellspacing="0" cellpadding="0" width="100%">
+      <table border="0" cellspacing="0" cellpadding="0" width="100%" class="noborder">
         <tr>
           <th class="c_l" style="border: 0">
             {L_bld_theyare} {L_bld_cellfree} {FIELDS_FREE}
@@ -97,7 +110,7 @@ var que_id = '{QUE_ID}';
 
   <tr>
     <td colspan="5" id="unit_info" style="vertical-align: top;">
-      <table cellspacing=0 cellpadding=0 valign=top style="vertical-align: top; border: 0;" class="noborder" width=100%>
+      <table cellspacing=0 cellpadding=0 valign=top style="vertical-align: top; border: 0;" width=100% class="noborder">
         <tr>
           <th width=120px valign=top>
             <div id="unit_name"></div>
@@ -109,15 +122,16 @@ var que_id = '{QUE_ID}';
 
         <tr>
           <th>
-            <div style="height: 140px; vertical-align: middle"><img id="unit_image" border="0" src="" align="top"></div>
+            <div style="height: 140px; vertical-align: middle">
+              <img id="unit_image" border="0" src="" align="top" width="120px">
+              <span id="unit_level"></span>
+            </div>
           </th>
 
           <th valign=top width="50%">
-            <div id="unit_create_link"></div>
-            <div>{L_ConstructionTime}<span id="unit_time"></span></div>
-            <table style="margin: 0px;">
+            <table style="margin: 0px;" width="100%">
               <tr>
-                <td class=c style="font-size: {$FONT_SIZE}" width=45>{L_sys_resources}</td>
+                <td class=c style="font-size: {$FONT_SIZE}" width=45 width="10%">{L_sys_resources}</td>
                 <td class=c style="font-size: {$FONT_SIZE}" width=65>{L_eco_price}</td>
                 <td class=c style="font-size: {$FONT_SIZE}" width=65>{L_eco_left}</td>
                 <td class=c style="font-size: {$FONT_SIZE}" width=65 hide_no_fleet="yes">{L_sys_fleet_and}</td>
@@ -141,20 +155,35 @@ var que_id = '{QUE_ID}';
                 <td style="font-size: {$FONT_SIZE}" id="deuterium_fleet" hide_no_fleet="yes" align="right">0</td>
               </tr>
             </table>
-            <div id="unit_destroy_link"></div>
+            <div>{L_ConstructionTime}<span id="unit_time"></span></div>
+            <form action="buildings.php" method="post" id="form_unit">
+              <input type="hidden" name="mode" value="{QUE_ID}" />
+              <input type="hidden" name="ally_id" value="{ALLY_ID}" />
+              <input type="hidden" name="unit_id" id="unit_id" />
+              <input type="hidden" name="action" />
+              <!-- IF STACKABLE -->
+                <div id="unit_create" style="visibility: hidden">
+                  <script type="text/javascript"><!--
+                    sn_ainput_make('unit_amount', {max: 0, button_max: true, button_zero: true});
+                  --></script>
+                  <div class="link positive unit_create">{LA_bld_create}</div> <span id="unit_create_amount"></span>
+                </div>
+              <!-- ELSE -->
+                <div id="unit_create" style="visibility: hidden" class="link positive unit_create">
+                  {LA_bld_create} {LA_level} <span id="unit_create_level"></span>
+                </div>
+                <div id="unit_destroy" style="visibility: hidden">
+                  <div id="unit_destroy_resources">&nbsp;</div>
+                  <div id="unit_destroy_time">&nbsp;</div>
+                  <div class="link negative unit_destroy">{LA_bld_destroy} {LA_level} <span id="unit_destroy_level"></span></div>
+                </div>
+              <!-- ENDIF -->
+            </form>
           </th>
-          <th width="50%">
-            <div id="unit_balance"></div>
-          </th>
+          <td class="c_l noborder" width="50%" id="unit_balance" valign="top">&nbsp;</td>
         </tr>
       </table>
     </td>
-
-    <!-- IF U_opt_int_struc_vertical && $QUE_NOT_EMPTY -->
-    <td rowspan="5" class="c_c" align="center" valign="top" width="120px">
-      <!-- INCLUDE eco_bld_queue_list -->
-    </td>
-    <!-- ENDIF -->
   </tr>
 
   <tr>
@@ -165,8 +194,30 @@ var que_id = '{QUE_ID}';
             <img border="0" src="{dpath}gebaeude/{production.ID}.gif" align="top" width="100%" height="100%">
           </span>
 
-          <span style="position: absolute; bottom: 2px; right: 18px; width: 70%; font-size: 100%; text-align: left;" class="icon_alpha">
-            <div class="fr">{production.TIME}</div>
+          <span style="position: absolute; height: 16px; bottom: 0px; right: 18px; width: 70%; font-size: 100%; text-align: left;" class="icon_alpha">
+            <div class="fr" style="padding-top: 1px; ">{production.TIME}</div>
+          </span>
+
+          <span style="position: absolute; top: 0; height: 16px; text-align: center; font-size: 120%; <!-- IF STACKABLE -->left: 0%; width: 100%;<!-- ELSE -->left: 15%; width: 70%;<!-- ENDIF -->" class="icon_alpha">
+            <!-- IF production.LEVEL_OLD || STACKABLE -->{production.LEVEL_OLD}<!-- IF production.LEVEL_BONUS --><span class="bonus">+{production.LEVEL_BONUS}</span><!-- ENDIF --><!-- ENDIF --><!-- IF production.LEVEL_QUED --><!-- IF production.LEVEL_QUED > 0 -->+<!-- ENDIF -->{production.LEVEL_QUED}<!-- ENDIF -->
+          </span>
+
+          <!-- IF QUE_HAS_PLACE && ! production.UNIT_BUSY && ! STACKABLE -->
+            <!-- IF QUE_HAS_FIELDS && production.BUILD_CAN && production.BUILD_RESULT == 0 -->
+              <span style="position: absolute; top: 0px; right: 0px;" class="icon_alpha unit_create"> <!-- onclick="document.location='buildings.php?mode={QUE_ID}&action=create&unit_id={production.ID}&ally_id={ALLY_ID}'" -->
+                <div class="icons icon-plus"></div>
+              </span>
+            <!-- ENDIF -->
+
+            <!-- IF production.LEVEL && production.DESTROY_CAN && production.DESTROY_RESULT == 0 -->
+              <span style="position: absolute; top: 0px; left: 0px;" class="icon_alpha unit_destroy"> <!-- onclick="document.location='buildings.php?mode={QUE_ID}&action=destroy&unit_id={production.ID}'" -->
+                <div class="icons icon-minus" title="{L_bld_destroy}: {L_sys_metal} {production.DESTROY_METAL}; {L_sys_crystal} {production.DESTROY_CRYSTAL}; {L_sys_deuterium} {production.DESTROY_DEUTERIUM}; {L_sys_time} {production.DESTROY_TIME}"></div>
+              </span>
+            <!-- ENDIF -->
+          <!-- ENDIF -->
+
+          <span style="position: absolute; top: 18px; left: 0px; width: 100%; height: 5ex; font-size: 100%;" class="icon_alpha">
+            {production.NAME}
           </span>
 
           <!-- IF     (production.METAL && (production.METAL_REST_NUM > 999999999 || production.METAL_REST_NUM < -99999999)) || (production.CRYSTAL && (production.CRYSTAL_REST_NUM > 999999999)) || production.CRYSTAL_REST_NUM < -99999999 || (production.DEUTERIUM && (production.DEUTERIUM_REST_NUM > 999999999  || production.DEUTERIUM_REST_NUM < -99999999)) -->
@@ -176,19 +227,12 @@ var que_id = '{QUE_ID}';
           <!-- ELSE -->
             <!-- DEFINE $FONT_SIZE = '100%' -->
           <!-- ENDIF -->
-          <span style="position: absolute; top: 48px; left: 0px; width: 100%; text-align: left; font-size: {$FONT_SIZE};" class="icon_alpha"> <!--  onclick="eco_struc_select_unit({production.ID})" onmouseout="eco_struc_unborder_unit({production.ID})" onmouseover="eco_struc_show_unit_info({production.ID})"> -->
+          <span style="position: absolute; top: 48px; left: 0px; width: 100%; text-align: left; font-size: {$FONT_SIZE};" class="icon_alpha">
             <!-- IF production.METAL --><div><div style="left: 0px; position: absolute;"><!-- IF $FONT_SIZE == '80%' -->{L_sys_metal_sh}<!-- ELSE -->{L_sys_metal}<!-- ENDIF --></div><div class="fr">{production.METAL_REST}</div></div><br><!-- ENDIF -->
             <!-- IF production.CRYSTAL --><div><div style="left: 0px; position: absolute;"><!-- IF $FONT_SIZE == '80%' -->{L_sys_crystal_sh}<!-- ELSE -->{L_sys_crystal}<!-- ENDIF --></div><div class="fr">{production.CRYSTAL_REST}</div></div><br><!-- ENDIF -->
             <!-- IF production.DEUTERIUM --><div><div style="left: 0px; position: absolute;"><!-- IF $FONT_SIZE == '80%' -->{L_sys_deuterium_sh}<!-- ELSE -->{L_sys_deuterium}<!-- ENDIF --></div><div class="fr">{production.DEUTERIUM_REST}</div></div><!-- ENDIF -->
           </span>
 
-          <!-- IF QUE_HAS_PLACE && ! production.UNIT_BUSY -->
-            <!-- IF QUE_HAS_FIELDS && production.BUILD_CAN && production.BUILD_RESULT == 0 -->
-              <span style="position: absolute; top: 0px; right: 0px;" class="icon_alpha" onclick="document.location='buildings.php?mode={QUE_ID}&action=create&unit_id={production.ID}&ally_id={ALLY_ID}'">
-                <div class="icons icon-plus"></div>
-              </span>
-            <!-- ENDIF -->
-          <!-- ENDIF -->
 
           <!-- IF production.BUILD_RESULT != 0 -->
             <span style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%" class="icon_alpha">
@@ -197,21 +241,7 @@ var que_id = '{QUE_ID}';
           <!-- ENDIF -->
 
 
-          <span style="position: absolute; top: 18px; left: 0px; width: 100%; height: 5ex; font-size: 100%;" class="icon_alpha">
-            {production.NAME}
-          </span>
 
-          <span style="position: absolute; top: 0; left: 15%; width: 70%; height: 16px; text-align: center; font-size: 120%;" class="icon_alpha">
-            <!-- IF production.LEVEL_OLD -->{production.LEVEL_OLD}<!-- IF production.LEVEL_BONUS --><span class="bonus">+{production.LEVEL_BONUS}</span><!-- ENDIF --><!-- ENDIF --><!-- IF production.LEVEL_QUED --><!-- IF production.LEVEL_QUED > 0 -->+<!-- ENDIF -->{production.LEVEL_QUED}<!-- ENDIF -->
-          </span>
-
-          <!-- IF QUE_HAS_PLACE && ! production.UNIT_BUSY -->
-            <!-- IF production.LEVEL && production.DESTROY_CAN && production.DESTROY_RESULT == 0 -->
-              <span style="position: absolute; top: 0px; left: 0px;" class="icon_alpha" onclick="document.location='buildings.php?mode={QUE_ID}&action=destroy&unit_id={production.ID}'">
-                <div class="icons icon-minus" title="{L_bld_destroy}: {L_sys_metal} {production.DESTROY_METAL}; {L_sys_crystal} {production.DESTROY_CRYSTAL}; {L_sys_deuterium} {production.DESTROY_DEUTERIUM}; {L_sys_time} {production.DESTROY_TIME}"></div>
-              </span>
-            <!-- ENDIF -->
-          <!-- ENDIF -->
 
           <!-- IF ! ALLY_ID -->
           <span style="position: absolute; bottom: 0; right: 0; cursor: pointer;" title="{L_flt_gather_all}" class="icon_alpha" onclick="document.location='fleet.php?fleet_page=5&cp={planet.ID}&re=0&metal={production.METAL_REST_NUM}&crystal={production.CRYSTAL_REST_NUM}&deuterium={production.DEUTERIUM_REST_NUM}'">
@@ -240,6 +270,7 @@ var que_id = '{QUE_ID}';
         change: '{production.CHANGE}',
         description: '{production.DESCRIPTION}',
         unit_busy: '{production.UNIT_BUSY}',
+        can_build: '{production.CAN_BUILD}',
 
         metal: '{production.METAL}',
         crystal: '{production.CRYSTAL}',
@@ -276,6 +307,14 @@ var que_id = '{QUE_ID}';
       --></script>
     <!-- END production -->
   </tr>
+</table>
+  </td>
+<!-- IF U_opt_int_struc_vertical && $QUE_NOT_EMPTY -->
+  <td width="20px" align="center" valign="top">
+    <!-- INCLUDE eco_bld_queue_list -->
+  </td>
+<!-- ENDIF -->
+</tr>
 </table>
 <div id="style_probe"></div>
 
