--- a/design/templates/OpenGame/simple_footer.tpl.html
+++ b/design/templates/OpenGame/simple_footer.tpl.html
@@ -1,9 +1,11 @@
+      </tr>
+    </table>
 
-    <div id="copyright" style="padding-top: 2ex;">
-      Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-20</span><span>14 Go</span>rlum<br>
-      In<span>spired by X</span>Nova Ra<span>geRe<span>pac</span>k v2</span>26
-    </div>
+      <div id="copyright" style="padding-top: 2ex;">
+        Project &quot;<a href="http://supernova.ws"><span id="supernova_ws">Sup<span>erNo</span>va<span>.W</span>S</span></a>&quot; Rel<span>ease {D_SN_RELEASE} V</span>{D_SN_VERSION} &copy; 20<span>09-20</span><span>14 Go</span>rlum<br>
+        In<span>spired by X</span>Nova Ra<span>geRe<span>pac</span>k v2</span>26
+      </div>
 
-    <div id="debug" style="text-align: left"></div>
+      <div id="debug" style="text-align: left"></div>
   </body>
 </html>
