--- a/design/templates/OpenGame/simple_header.tpl.html
+++ b/design/templates/OpenGame/simple_header.tpl.html
@@ -99,3 +99,5 @@
     <!-- IF ADV_SEO_JAVASCRIPT -->
     {ADV_SEO_JAVASCRIPT}
     <!-- ENDIF -->
+    <table class="markup" width="100%">
+      <tr>
