--- a/design/css/global.css
+++ b/design/css/global.css
@@ -1,12 +1,41 @@
-body
+html, body
 {
   overflow-y: scroll;
+  height: 100%;
+/*  min-height: 100%;
+  min-width: 100%;
+  position: absolute;*/
 }
 
-body, form, iframe, html
+html, body, form, iframe
 {
   margin: 0; padding: 0; border: 0;
 }
+
+#sn_menu {
+/*  float:left; */
+  width: 130px;
+/*  height: 100%;*/
+  /*  top:0;left:0;bottom:0;position: absolute;*/
+  padding-left:5px;
+  padding-right:5px;
+}
+
+#sn_navbar {
+  /*   margin-left: 150px;*/
+}
+
+#page_body
+{
+  margin-left: 150px;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: auto;
+}
+
+
+
+
 
 input.button
 {
@@ -138,7 +167,6 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 
 .error
 {
-/*  text-align: left;*/
   color: red;
 }
 
@@ -147,7 +175,7 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
   border: 0px;
 }
 
-.makeup, .makeup > tbody > tr, .makeup > tbody > tr > th, .makeup > tbody > tr > td
+.markup, .markup > tbody > tr, .markup > tbody > tr > th, .markup > tbody > tr > td
 {
   border: 0px;
   background: transparent;
@@ -165,26 +193,6 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
   text-align: center;
 }
 
-#page_body
-{
-  margin-left: 150px;
-  padding-left: 10px;
-  padding-right: 10px;
-  width: auto;
-}
-
-#sn_navbar
-{
-/*  padding-left: 150px;*/
-}
-
-#sn_menu {
-  float:left;
-  width: 130px;
-/*  text-align: center;*/
-  padding-left:5px;
-  padding-right:5px;
-}
 
 #sn_menu td, #sn_menu th
 {
@@ -285,25 +293,18 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
   height: 100%
 }
 
-/* .empire_cell*/
 .empire_cell_single, .empire_cell_double
 {
-/*  cursor: pointer; */
   position: relative;
-/*  height: 100%;*/
 }
 
 .empire_cell_single
 {
-/*  position: relative;*/
-/*  width: 100%;*/
   height: 13px;
 }
 
 .empire_cell_double
 {
-/*  position: relative;*/
-/*  width: 100%;*/
   height: 35px;
 }
 
@@ -317,7 +318,6 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 
 .empire_cell
 {
-/*  cursor: pointer;*/
   position: absolute;
   top: 0px;
   left: 0px;
@@ -330,13 +330,6 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 .empire_number
 {
   cursor: pointer;
-/*  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  vertical-align: middle;
-  text-align: center;*/
 }
 
 .planet_list_wrap
@@ -486,24 +479,7 @@ body .ui-dialog, div .ui-dialog-content { background: transparent; border: none;
 {
   font-weight: normal;
 }
-/*
-tr.c_l > th, tr.c_l > td
-{
-  text-align: left;
-}
-tr.c_r > th, tr.c_r > td
-{
-  text-align: right;
-}
-tr.c_c > th, tr.c_c > td, td.c
-{
-  text-align: center;
-}
-tr.c_j > th, tr.c_j > td
-{
-  text-align: justify;
-}
-*/
+
 th.c_l, td.c_l
 {
   text-align: left;
