--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -1,5 +1,5 @@
 <!-- IF .menu -->
-<div id="sn_menu">
+<td id="sn_menu" valign="top">
   <table width="100%" cellspacing="0" cellpadding="0" id="left_menu" align="left">
   <!-- BEGIN menu -->
     <tr><!-- IF menu.LEVEL == 'header' --><!-- DEFINE $TX = 'th' --><!-- ELSE --><!-- DEFINE $TX = 'td' --><!-- ENDIF -->
@@ -36,7 +36,7 @@
     </tr>
   <!-- END menu -->
   </table>
-</div>
+</td>
 
 <script type="text/javascript"><!--
 sn_timers.unshift({'id': 'menu_admin_server_time', 'type': 2, 'active': true, 'start_time': {TIME_NOW}, options: 3});
